# talkstools

./: .gitignore  README.md  config.blank.yml  pyproject.toml  requirements.txt
src/: abstract.py  announce.py  bot.py  check_config.py  config.py  debug.py  emails.py  generate.py  main.py  reminder.py  scraper.py  tasks.py
src/seminar-tools/: config.py  debug.py  emails.py  reminder.py  scraper.py  tasks.py  utils.py
src/talkstools/: auth.py  main.py  utils.py
src/talkstools/core/: auth.py  structs.py
src/talkstools/discord/: bot.py
src/talkstools/researchseminars/: lookup.py
src/talkstools/talks/: announce.py  login.py  populate.py  pull.py  series.py  start.py  structs.py  talk.py  talk_read.py  talk_write.py  url.py  utils.py
src/talkstools/talks/templates/: full-details.txt  title-and-speaker.txt
src/talkstools/tasks/: announce.py
src/talkstools/tasks/templates/: announce.txt  discord-announce.txt  full-details.txt  signature.txt
src/talkstools/templates/: discord-reminder.txt
src/templates/: abstract.txt  announce.txt  discord-announce-abstract.txt  discord-announce-details.txt  discord-announce-intro.txt  discord-announce.txt  full-details.txt  location.txt  reminder.txt  signature.txt  talk_details.txt  title-and-speaker.txt
templates/: reminder.txt  signature.txt  upcoming_talk.txt
